# sty-docs

./: .gitignore  Pipfile  Project  README.md  make.py  pyproject.toml  sty_src_hash
sphinx/: conf.py  index.rst
sphinx/_static/: mewo_custom.css
sphinx/docs/: coloring.rst  customizing.rst  developing_testing.rst  effects.rst  exporting.rst  known_issues.rst  muting.rst  resetting.rst
sphinx/intro/: getting_started.rst  install.rst  requirements.rst
